Finalizando Barbearia Alura

--- a/style.css
+++ b/style.css
@@ -1,13 +1,20 @@
 
-body{
-    background-color: #CCCCCC;
-}
+
 
 #banner{
     width: 100%;
 }
 
-h1{
+.principal{
+    background-color: #CCCCCC;
+    padding: 30px;
+}
+
+.titulo-principal{
+    padding-left: 20px;
+}
+
+.titulo-centralizado{
     text-align: center}
 
 p{
@@ -25,4 +32,22 @@ em strong{
 
 .itens{
     font-style: italic;
+}
+
+.beneficios{
+    background: #FFFFFF;
+    padding: 20px;
+}
+
+
+
+ul{
+    display: inline-block;
+    vertical-align: top ;
+    width: 20%;
+    margin-right: 15%;
+}
+
+.imagembeneficios{
+    width: 50%;
 }
